# choras-fa-adapter

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/choras_adapter_public_drafts/: FA_CHORAS_ADAPTER_CONTRACT.md  INSTALL_INTERFACE_BEHAVIOR.md  cli.py.example  fa_interface.py.tpl  installer.py.example  pyproject.toml.example
samples/: README.md  choras_input.example.json
scripts/: run-local-ci.sh
src/choras_fa_adapter/: __init__.py  choras_io.py  cli.py  config.py  errors.py  fa_client.py  installer.py  mesh.py  models.py  orchestrator.py  payload_builder.py  validation.py
tests/: test_config.py  test_fa_client.py  test_installer.py  test_mesh.py  test_orchestrator.py  test_payload_builder.py  test_receiver_mapping.py  test_validation.py
