[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "choras-fa-adapter"
version = "0.1.1"
description = "Thin CHORAS adapter for the private FA backend"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "FA Team" }]
dependencies = [
  "click>=8.1,<9",
  "httpx>=0.27,<0.28",
  "meshio>=5.3,<6",
  "pydantic>=2.7,<3",
  "PyYAML>=6,<7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "pytest-cov>=5,<6",
  "ruff>=0.4,<0.5",
  "mypy>=1.10,<2",
  "types-PyYAML>=6,<7",
]

[project.scripts]
choras-fa-adapter = "choras_fa_adapter.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
